# ACWORK

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci-deploy.yml
api/: .dockerignore  Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 9212a485759b_create_tasks_table.py
api/app/: main.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: health.py  notion.py  tasks.py
api/app/core/: config.py  database.py  http_client.py  logging.py  security.py
api/app/models/: base.py  task.py
api/app/schemas/: __init__.py  task.py
api/app/services/: __init__.py  n8n_service.py  notion_service.py  task_service.py
api/app/workers/: celery_app.py  tasks.py
api/tests/: conftest.py  test_n8n_service.py  test_security.py  test_task_service.py  test_tasks.py  test_workers.py
monitoring/grafana/dashboards/: fastapi.json
monitoring/grafana/provisioning/alerting/: contact-points.yml  policies.yml  rules.yml
nginx/: nginx.conf
nginx/conf.d/: api.conf  n8n.conf
postgres/: init.sql
scripts/: backup.sh  renew-ssl.sh  restore.sh
